--- a/cambio_aceite.html
+++ b/cambio_aceite.html
@@ -52,14 +52,9 @@
 </div>
 
     <div class="container-fluid">
-      <div class="row">
-          <div class="col" style="border:  1px solid #000;"> primera columna</div>
-          <div class="col" style="border:  1px solid #000;"> segunda columna</div>
-          <div class="col" style="border:  1px solid #000;"> tercera columna</div>
-      </div>
 
       <div class="row">
-        <div class="col-md-3" style="border:  1px solid #000;">
+        <div class="col-12" style="border:  1px solid #000;">
           <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="img/descarga.jpg" alt="Card image cap">
             <div class="card-body">
@@ -73,6 +68,39 @@
         
       </div>
 
+      <div class="container-fluid">
+      <div class="row">
+        <div>
+          <img src="img/descarga.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+      </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="img-fluid" style="width: 100%;" src="img/descarga.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" style="width: 100%;" src="img/imagen.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="img-fluid" style="width: 100%;" src="img/descarga.jpg" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
     
 
 
